--- a/AndroidStudioProjects/GoSari7.NEW.MAY.6.2016/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/GoSari7.NEW.MAY.6.2016/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/logo_new"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.TranslucentActionBar">
